Tests/ShouldSucceed/try27.adl
CONTEXT Test

PATTERN Test27
RELATION a[FAKE1*FAKE1]
RELATION a[A*C] [TOT]
RELATION b[B*C] [TOT]
RELATION b[FAKE2*D]
RULE a /\ b = I[D];V[D*C]
CLASSIFY D IS A/\B
-- was:  RULE I[D] = I[A] /\ I[B]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This test should find the right occurrences for a and b
   Result: PASS
-}