Tests/ShouldFail/try27.adl
CONTEXT Test

PATTERN Test27
RELATION a[FAKE1*FAKE1]
RELATION a[Z*C] [TOT]
RELATION b[B*C] [TOT]
RELATION b[FAKE2*D]
RULE a /\ b = I[D];V[D*C]
CLASSIFY D IS A/\B
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This test should yield:
Type error, cannot match:
  the concept "FAKE1" (Src of a)
  and concept "B" (Src of b)
  If you think there is no type error, add an order between concepts "FAKE1" and
 "B".
  Error at symbol /\ in file try27.adl at line 8 : 8

Result: FAIL
-}